# uai_2026_submission

./: .gitignore  README.md  analyze_btn_params.py  environment.yml  pyproject.toml  requirements.txt
experiments/: config_parser.py  dataset_loader.py  device_utils.py  run_grid_search_btn.py  run_grid_search_featurewise.py  run_grid_search_polynomial.py  run_grid_search_tn_als.py  run_kfold_btn.py  run_kfold_tn_als.py  trackers.py
experiments/configs/: 0_generate_btn_configs.py  0_generate_tn_als_configs.py  als_abalone_btt_bias.json  als_abalone_btt_nobias.json  als_abalone_cpd_bias.json  als_abalone_cpd_nobias.json  als_abalone_lmpo2_bias.json  als_abalone_lmpo2_nobias.json  als_abalone_mpo2_bias.json  als_abalone_mpo2_nobias.json  als_ai4i_cpd_bias.json  als_ai4i_cpd_nobias.json  als_ai4i_lmpo2_bias.json  als_ai4i_lmpo2_nobias.json  als_ai4i_mpo2_bias.json  als_ai4i_mpo2_nobias.json  als_appliances_cpd_bias.json  als_appliances_cpd_nobias.json  als_appliances_lmpo2_bias.json  als_appliances_lmpo2_nobias.json  als_appliances_mpo2_bias.json  als_appliances_mpo2_nobias.json  als_bike_btt_bias.json  als_bike_btt_nobias.json  als_bike_cpd_bias.json  als_bike_cpd_nobias.json  als_bike_lmpo2_bias.json  als_bike_lmpo2_nobias.json  als_bike_mpo2_bias.json  als_bike_mpo2_nobias.json  (+128 more)
model/: BTT_models.py  CPD_models.py  MPO2_models.py  __init__.py  builder.py  load_ucirepo.py
scripts/: RECOVER_RESULTS.md  analyze_kfold_results.py  recover_results_from_runs.py
showcase/: 04_bond_trimming_analysis.py
tensor/: btn.py  builder.py  distributions.py  tn_als.py
(+3853 files in other folders)
