[project]
name = "bayesian-env-aim"
version = "0.1.0"
dependencies = [
    "ucimlrepo==0.0.7",
    "quimb==1.11.2",
    "torch==2.9.1",
    "numpy==2.3.5",
    "numba==0.63.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "cotengra==0.7.5",
    "autoray==0.8.0",
    "jax==0.8.2",
    "tqdm==4.67.1",
]

[tool.uv]
managed = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model", "experiments"]

[tool.setuptools.package-data]
experiments = ["configs/*.json"]


